# bluegriffon

./: AGENTS.md  README.md  UI_MODERNIZATION_PLAN.md  _tmp_local_fix_13a.patch  _tmp_local_installer_build.cmd  _tmp_local_installer_build.sh  bluegriffon.code-workspace  confvars.sh  dependency_reduction_report.md  moz.build  plan.md  run-icu-test.cmd  run-local-build-verify.cmd  run-original-bluegriffon-clean.bat  stltest.cpp  xtest.cpp
.build-tools/: python2.7
.build-tools-local/: link
.build-tools/downloads/: autoconf2.13-2.13-6-any.pkg.tar  make-4.4.1-2-x86_64.pkg.tar  mingw-w64-x86_64-make-4.4.1-4-any.pkg.tar  mingw-w64-x86_64-make-4.4.1-4-any.pkg.tar.zst  pkgconf-2.5.1-1-x86_64.pkg.tar  pkgconf-2.5.1-1-x86_64.pkg.tar.zst  unzip-6.0-3-x86_64.pkg.tar  yasm-1.3.0-3-x86_64.pkg.tar.zst  zip-3.0-4-x86_64.pkg.tar  zip-3.0-4-x86_64.pkg.tar.zst
.build-tools/msys2-pkgs/: autoconf2.13-2.13-6-any.pkg.tar.zst  yasm-1.3.0-3-x86_64.pkg.tar
.build-tools/msys2-root/: .BUILDINFO  .PKGINFO
.github/scripts/: build-bluegriffon-windows.sh
.github/workflows/: build-bluegriffon-installer.yml  build-bluegriffon.yml  build-standalone-sample.yml  build-windows.yml  build.yml  ci-followup-trigger.yml
.windsurf/: windsurf-improvements.md
app/: HTMLDialogWindow.cpp  HTMLDialogWindow.h  Makefile.in  WebView2TestWindow.cpp  WebView2TestWindow.h  application.ini  moz.build  nsEditorApp.cpp
app/profile/: bluegriffon-prefs.js
ci-logs/: build-exit.txt  metadata.txt
config/: gecko_dev_local_build_fixes.patch  mozconfig.win
locales/en-US/: aria.mn  base.mn  cssproperties.mn  domexplorer.mn  fs.mn  gfd.mn  its20.mn  markdown.mn  op1.mn  scripteditor.mn  stylesheets.mn  tipoftheday.mn
portable-run-dev/: .gdbinit_python  .lldbinit  greprefs.js  run-bluegriffondev.bat
portable-run-dev/chrome/: bluegriffon-en-US.manifest  bluegriffon.manifest  cssproperties.manifest  en-US.manifest  gfd-en-US.manifest  markdown.manifest  op1-en-US.manifest  op1.manifest
portable-run-dev/components/: appshell.xpt  appstartup.xpt  caps.xpt  chrome.xpt  content_webrtc.xpt  content_xslt.xpt  dibgutils.xpt  dom_audiochannel.xpt  dom_core.xpt  dom_css.xpt  dom_events.xpt  dom_file.xpt  dom_geolocation.xpt  dom_html.xpt  dom_media.xpt  dom_power.xpt  dom_presentation.xpt  dom_quota.xpt  dom_storage.xpt  dom_xhr.xpt  editor.xpt  extensions.manifest  extensions.xpt  formautofill.manifest  htmlparser.xpt  imglib2.xpt  inspector.xpt  interfaces.manifest  jar.xpt  jsdownloads.xpt  locale.xpt  loginmgr.xpt  mozfind.xpt  necko_about.xpt  necko_cookie.xpt  necko_dns.xpt  necko_http.xpt  nsLoginManagerPrompter.js  nsURLFormatter.js  nsUrlClassifierListManager.js  (+20 more)
portable-run-dev/modules/: screens.jsm
portable-run-packaged-dev/: Accessible.tlb  application.ini  chrome.manifest  dependentlibs.list  dependentlibs.list.gtest  platform.ini
portable-run-packaged-dev/chrome/: aria.manifest  domexplorer.manifest  fs-en-US.manifest  fs.manifest  gfd.manifest  its20.manifest  marionette.manifest  markdown-en-US.manifest  scripteditor.manifest  stylesheets.manifest  svg-edit.manifest  toolkit.manifest
portable-run-packaged-dev/components/: TelemetryStartup.js  accessibility.xpt  alerts.xpt  autocomplete.xpt  bgCommandHandler.js  browser-element.xpt  commandhandler.xpt  composer.xpt  content_events.xpt  content_geckomediaplugins.xpt  content_html.xpt  docshell.xpt  dom.xpt  dom_base.xpt  dom_bindings.xpt  dom_network.xpt  dom_notification.xpt  dom_push.xpt  dom_security.xpt  dom_webspeechsynth.xpt  dom_workers.xpt  dom_xul.xpt  downloads.xpt  fastfind.xpt  layout_base.xpt  layout_printing.xpt  layout_xul_tree.xpt  mimetype.xpt  mozintl.xpt  necko.xpt  necko_cache2.xpt  necko_socket.xpt  necko_websocket.xpt  nsContentDispatchChooser.js  nsHelperAppDlg.js  nsUrlClassifierLib.js  places.xpt  shistory.xpt  telemetry.xpt  toolkit_asyncshutdown.xpt  (+10 more)
portable-run-packaged-dev/modules/: AppConstants.jsm  DownloadIntegration.jsm  FormHistory.jsm  osfile.jsm
standalone_webview2_sample/: CMakeLists.txt  MinimalWebView2.cpp
(+164 files in other folders)
